src/objects/Sync2__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sync1</label>
        <referenceTo>Sync1__c</referenceTo>
        <relationshipLabel>Sync2</relationshipLabel>
        <relationshipName>Sync2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync2Email__c</fullName>
        <label>Sync2Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sync2Phone__c</fullName>
        <label>Sync2Phone</label>
        <type>Phone</type>
    </fields>
    <label>Sync2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sync2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>